--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
 language: python
+python:
+  - "3.5"
 # command to install dependencies
-install: "pip2 install -r requirements.txt"
+install: "pip3 install -r requirements.txt"
