--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-router-redux": "^4.0.5",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.0",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "webpack": "^1.12.13"
   }
 }
